--- a/static/style.css
+++ b/static/style.css
@@ -20,7 +20,7 @@ p {
 .header {
   position:relative;
   text-align:center;
-  background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
+  background: linear-gradient(60deg, rgb(183, 87, 58) 0%, rgb(197, 172, 30) 100%);
   color:white;
 }
 .logo {
@@ -112,6 +112,17 @@ p {
   background: #ebebeb;
 }
 
+.main-block2 {
+  max-width: 540px;
+  min-height: 460px;
+  padding: 10px 0;
+  margin: auto;
+  border-radius: 5px;
+  border: solid 1px #ccc;
+  box-shadow: 1px 2px 5px rgba(0,0,0,.31);
+  background: #ebebeb;
+}
+
 h2 {
   font-family: 'Lato', sans-serif;
   font-size: 30px;
@@ -134,6 +145,7 @@ hr {
   color: #a9a9a9;
   opacity: 0.3;
 }
+
 .main-block {
   max-width: 340px;
   min-height: 260px;
@@ -144,6 +156,7 @@ hr {
   box-shadow: 1px 2px 5px rgba(0,0,0,.31);
   background: #ebebeb;
 }
+
 form {
   margin: 0 30px;
 }
@@ -153,58 +166,37 @@ input[type=text] {
   width: calc(100% - 57px);
   height: 36px;
   margin: 13px 0 0 -5px;
-  padding-left: 10px;
+  padding-left: 10.5px;
   border-radius: 0 5px 5px 0;
   border: solid 1px #cbc9c9;
   box-shadow: 1px 2px 5px rgba(0,0,0,.09);
   background: #fff;
-}
-
-input[type=phone] {
-  font-family: 'Lato', sans-serif;
-  width: calc(100% - 57px);
-  height: 36px;
-  margin: 13px 0 0 -5px;
-  padding-left: 10px;
-  border-radius: 0 5px 5px 0;
-  border: solid 1px #cbc9c9;
-  box-shadow: 1px 2px 5px rgba(0,0,0,.09);
-  background: #fff;
-}
-
-input[type=phone] {
-  margin-bottom: 15px;
-}
-
-#icon-tag {
-  display: inline-block;
-  padding: 10px 12px;
-  box-shadow: 1px 2px 5px rgba(0,0,0,.09);
-  background: #1c87c9;
-  color: #fff;
-  text-align: center;
-}
-#icon-toilet {
-  display: inline-block;
-  padding: 10px 11px;
-  box-shadow: 1px 2px 5px rgba(0,0,0,.09);
-  background: #1c87c9;
-  color: #fff;
-  text-align: center;
-}
-#icon-phone {
-  display: inline-block;
-  padding: 10px 12px;
-  box-shadow: 1px 2px 5px rgba(0,0,0,.09);
-  background: #1c87c9;
-  color: #fff;
-  text-align: center;
 }
 
 .btn-block {
   margin-top: 20px;
   text-align: center;
 }
+
+#icon-fire {
+  display: inline-block;
+  padding: 10px 15px;
+  box-shadow: 1px 2px 5px rgba(0,0,0,.09);
+  background: #e04b26;
+  color: #fff;
+  text-align: center;
+}
+
+#icon-name {
+  display: inline-block;
+  padding: 10px 12px;
+  box-shadow: 1px 2px 5px rgba(0,0,0,.09);
+  background: #e04b26;
+  color: #fff;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
 input[type=submit] {
   font-family: 'Lato', sans-serif;
   width: 100%;
@@ -212,12 +204,12 @@ input[type=submit] {
   margin: 10px auto;
   border-radius: 5px;
   border: none;
-  background: #1c87c9;
+  background: #e04b26;
   font-size: 14px;
   font-weight: 600;
   color: #fff;
 }
 
 input[type=submit]:hover {
-  background: #26a9e0;
+  background: #e04b26;
 }
